# syncengine

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN_AESTHETIC_SUMMARY.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_V2.md  Dioxus.toml  LOGS.md  NAV_HEADER_IMPLEMENTATION.md  NAV_HEADER_VISUAL.md  Notes.md  PROFILE_REDESIGN.md  RemainingIssues.md  SYNCHRONICITY_V2_SPEC.md  TESTING_CONTACT_EXCHANGE.md  TEST_ARCHITECTURE_ANALYSIS.md  se
.claude/: ralph-loop.local.md
.sisyphus/plans/: nav-header-redesign.md  network-chat-redesign.md
archive/: DESIGN_SYSTEM_V1.md
assets/: style.css
crates/syncengine-cli/: Cargo.toml
crates/syncengine-cli/src/: main.rs
crates/syncengine-cli/tests/: cli_integration.rs
crates/syncengine-core/: Cargo.toml
crates/syncengine-core/benches/: sync_bench.rs
crates/syncengine-core/src/: ARCHITECTURE.md  blobs.rs  crypto.rs  engine.rs  error.rs  invite.rs  lib.rs  peers.rs  storage.rs  types.rs
crates/syncengine-core/src/chat/: conversation.rs  message.rs  mod.rs
crates/syncengine-core/src/identity/: did.rs  keypair.rs  mod.rs  signature.rs
crates/syncengine-core/src/logging/: entry.rs  layer.rs  mod.rs  report.rs  writer.rs
crates/syncengine-core/src/profile/: keys.rs  log.rs  mirror.rs  mod.rs  packet.rs  sealed.rs  topic.rs
crates/syncengine-core/src/realm/: doc.rs  mod.rs
crates/syncengine-core/src/storage/: blobs.rs  contacts.rs  peers.rs  pinned_profiles.rs  profile_pinners.rs  profiles.rs
crates/syncengine-core/src/sync/: contact_handler.rs  contact_manager.rs  contact_manager.rs.bak  contact_protocol.rs  envelope.rs  events.rs  gossip.rs  manager.rs  mod.rs  packet_events.rs  packet_protocol.rs  profile_pinning.rs  profile_protocol.rs  protocol.rs  relay.rs
crates/syncengine-core/src/types/: capability.rs  contact.rs  image.rs  peer.rs  profile.rs
crates/syncengine-core/tests/: E2E_RECONNECTION_TEST_STATUS.md  blob_p2p_test.rs  contact_e2e_test.rs  contact_integration.rs  e2e_reconnection_test.rs  edge_cases.rs  multi_realm_sync.rs  p2p_integration.rs  packet_integration.rs  profile_propagation_e2e.rs  property_tests.rs  stress_tests.rs
crates/syncengine-mcp/: Cargo.toml
crates/syncengine-mcp/src/: error.rs  lib.rs  main.rs
crates/syncengine-mcp/src/harness/: mesh.rs  mod.rs  node.rs
crates/syncengine-mcp/src/immune/: mod.rs
crates/syncengine-mcp/src/topology/: mod.rs
crates/syncengine-mcp/src/tracing/: events.rs  mod.rs  trace.rs
crates/syncengine-mcp/src/verification/: mod.rs
crates/syncengine-scenarios/: Cargo.toml
crates/syncengine-scenarios/src/: api.rs  instance.rs  lib.rs  main.rs  runtime.rs  scheduler.rs
crates/syncengine-ui/: Cargo.toml
crates/syncengine-ui/assets/: style.css
crates/syncengine-ui/src/: lib.rs
crates/syncengine-ui/src/components/: button.rs  category_pills.rs  field_status.rs  input.rs  intention_item.rs  mod.rs  seed_of_life.rs
scenarios/: chaos.lua  hub-spoke.lua  mesh-3.lua  mesh-messaging.lua  offline-relay.lua  staggered-join.lua
scenarios/lib/: helpers.lua
scenarios/mesh-3/: LOGS.md
scenarios/mesh-messaging/: LOGS.md
scenarios/offline-relay/: LOGS.md
scripts/: clean.sh  cleanup-db-lock.sh
src/: app.rs  context.rs  main.rs
src/components/: field_status.rs  intention_creator.rs  invite_panel.rs  markdown_editor.rs  mobile_nav.rs  mod.rs  nav_header.rs  packet_event_log.rs  packet_flow.rs  peer_status_dropdown.rs  realm_selector.rs  task_list.rs  unified_field.rs
src/components/cards/: bio_card.rs  card_gallery.rs  card_header.rs  golden_card.rs  markdown_editor.rs  mod.rs  profile_card.rs  quest_card.rs  vertical_artifact_card.rs
src/components/contacts/: contact_card.rs  contacts_gallery.rs  generate_invite_button.rs  invite_code_modal.rs  inviter_preview_modal.rs  mod.rs  pending_requests_section.rs
src/components/images/: async_image.rs  image_upload.rs  mod.rs
src/components/messages/: conversation_view.rs  message_bubble.rs  message_compose.rs  message_input.rs  messages_list.rs  mod.rs
src/components/profile/: mod.rs  peer_card.rs  peer_list.rs  presence_card.rs  qr_signature.rs  stewardship_stats.rs
src/pages/: field.rs  landing.rs  mod.rs  network.rs  profile.rs  realm_view.rs
src/theme/: colors.rs  mod.rs  styles.rs
