[package]
name = "syncengine-cli"
version = "0.1.0"
edition = "2021"
description = "Synchronicity Engine CLI - P2P task sharing"
license = "MIT"

[[bin]]
name = "syncengine"
path = "src/main.rs"

[dependencies]
syncengine-core = { path = "../syncengine-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "5"
chrono.workspace = true
hex.workspace = true
iroh.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
