[package]
name = "syncengine-scenarios"
version = "0.1.0"
edition = "2021"
description = "Lua-based scenario runner for SyncEngine testing"

[[bin]]
name = "syncengine-scenario"
path = "src/main.rs"

[dependencies]
# Core library (for logging)
syncengine-core = { path = "../syncengine-core" }

# Lua runtime
mlua.workspace = true

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
dirs.workspace = true

# For process management
nix.workspace = true

# Serialization (for message IPC)
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
